feat(source-sync): 来源平台自动回传 Worker（默认关闭）
省掉的只有「人点按钮」这一步，门禁一条不减：Worker 走与人工完全相同的
check → execute 用例，因此仍逐条经过平台事实可读、来源订单可写状态、
收货地址未在平台侧变更、物流公司命中平台实时字典、回填工作簿已生成
五道校验；幂等键、外部写租约、claim 后重跑检查与 check-hash 陈旧判定
也原样保留。任一不过即阻断并落复核事项，绝不上传。

取舍写在类注释里：requireAuthenticatedOperator 的原意是「必须由服务端
已认证且身份一致的人工操作员执行」。本 Worker 用配置的服务账号满足该
一致性校验——机制保留，执行者由人换成服务。因为这是往客户的平台写数据
（与京东建单是我们自己的仓不同），所以：
- 默认关闭；
- enabled=true 但未配 operator 时 fail-closed 不启动，不猜默认身份；
- 审计操作人即该服务账号，事后可追溯「这是自动发的」。

候选只挑 SHIPPED 且运单已回填、且无 shipment_syncs 记录或上次 SYNC_FAILED 的
Shipment：SYNCING 由 recoverExpiredSyncing 负责，SYNCED 已完成，都不重复发起。
幂等键绑定 check-hash——事实变了就是新意图，事实没变则天然去重。

配置三处同步补齐（application.yml / docker-compose 透传 / .env.example），
避免重演 AGENT_* 与 WECOM_CARD_* 那类「yml 认得、compose 不传」的漏配。