@@ -18,7 +18,6 @@ import java.math.BigDecimal;
 import java.security.MessageDigest;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HexFormat;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -621,19 +620,20 @@ public class ShipmentJdSkuMappingGateService {
         return Map.of("code", code, "message", message);
     }
 
-    /**
-     * 名称比对在本门禁只产生 NAME_MISMATCH 警示、从不阻断提交（阻断只由 issues 决定，
-     * 见 applyRemoteFacts 的 warnings 通道与既有回归测试）。MATCHED 时不追加警示；
-     * NO_REFERENCE 与不命中同样归入警示，行为与重构前逐位一致。
-     * 比对规则由 {@link JdGoodsNameMatch} 唯一实现（设计收敛票 01）。
-     */
     private boolean nameMatches(SkuSubject subject, MappingRow mapping, String remoteName) {
-        return JdGoodsNameMatch.verdict(
-                        remoteName,
-                        Arrays.asList(
-                                subject.productName(),
-                                text(mapping.externalCodes().get("provider_sku_name"))))
-                == JdGoodsNameMatch.Verdict.MATCHED;
+        String normalizedRemote = normalize(remoteName);
+        for (String candidate : List.of(
+                subject.productName() == null ? "" : subject.productName(),
+                text(mapping.externalCodes().get("provider_sku_name")) == null
+                        ? ""
+                        : text(mapping.externalCodes().get("provider_sku_name")))) {
+            String normalized = normalize(candidate);
+            if (!normalized.isEmpty()
+                    && (normalizedRemote.equals(normalized)
+                            || normalizedRemote.contains(normalized)
+                            || normalized.contains(normalizedRemote))) return true;
+        }
+        return false;
     }
 
     private Map<String, Object> jsonMap(String json) {
@@ -656,6 +656,10 @@ public class ShipmentJdSkuMappingGateService {
 
     private static String text(Object value) {
         return value == null || value.toString().isBlank() ? null : value.toString();
+    }
+
+    private static String normalize(String value) {
+        return value == null ? "" : value.trim().replaceAll("\\s+", "");
     }
 
     private static String token() {
